# algebraic_reductions_and_vectorization

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
